<?xml version="1.0" encoding="utf-8"?>
<resources>
	<string name="title" />
	<string name="server_document_root" />
	<string name="server_install_new_version_question" />
	<string name="error_document_root_does_not_exist" />
	<string name="about_content" />
	<string name="about_content_parameter" />
	<string name="manual_content" />
	<string name="manual_content_parameter" />
	<string name="error_document_root_not_empty" />
	<string name="error_cannot_write_to_directory">Cannot write to directory %1$s</string>
	<string name="server_running"><![CDATA[Server is running on %1$s]]></string>
	<string name="server_stopped">Server is stopped</string>
	<string name="server_start">Start server</string>
	<string name="server_stop">Stop server</string>
	<string name="server_status_updating">Updating server status…</string>
	<string name="server_port">Server port</string>
	<string name="server_start_on_boot_title">Start on boot</string>
	<string name="server_start_on_boot_summary">Start server on device boot</string>
	<string name="server_interface">Server address</string>
	<string name="server_installing">Installing server…</string>
	<string name="loading_text">Loading text…</string>
	<string name="close">Close</string>
	<string name="choose">Choose</string>
	<string name="cancel">Cancel</string>
	<string name="go_up">Go up</string>
	<string name="about">About</string>
	<string name="licenses">Licenses</string>
	<string name="server_installation_failed">Server installation failed: %1$s</string>
	<string name="open">Open</string>
	<string name="settings">Settings</string>
	<string name="manual">Manual</string>
	<string name="enable_all">Enable all</string>
	<string name="disable_all">Disable all</string>
	<string name="dismiss">Dismiss</string>
	<string name="error_operation_failed">Error: operation failed</string>
	<string name="error_cannot_create_directory">Error: cannot create directory</string>
	<string name="server_running_public">Server is running</string>
	<string name="show_notification_server">Show notification</string>
	<string name="show_notification_server_summary">Show notification while server is running</string>
	<string name="grant">Grant</string>
	<string name="back_to_licenses">Back to license list</string>
	<string name="warning_message">Warning: %1$s</string>
	<string name="permission_files_needed">%1$s needs access to files to work. Please grant access to files.</string>
	<string name="downloading_packages">Obtaining list of available versions</string>
	<string name="downloading_packages_failed"><![CDATA[Error - failed to obtain list of available versions with message:<br /><font color="#FF0000">%1$s</font>]]></string>
	<string name="retry">Retry</string>
	<string name="installing_package"><![CDATA[%1$s<br />Installing]]></string>
	<string name="installing_package_download"><![CDATA[%1$s<br />1 / 2 - downloading: %2$s%%]]></string>
	<string name="installing_package_files"><![CDATA[%1$s<br />2 / 2 - installing files: %2$s%%]]></string>
	<string name="install_package_title"><![CDATA[%1$s <b>%2$s</b> (build #%3$s)]]></string>
	<string name="install_package_title_currently_installed"><![CDATA[%1$s - <b>currently installed</b>]]></string>
	<string name="select_package_to_install"><![CDATA[Select <b>%1$s</b> build to install:]]></string>
	<string name="install_package_failed"><![CDATA[Error - <b>%2$s</b> install failed with message:<br /><font color="#FF0000">%1$s</font>]]></string>
	<string name="error_network">network problem, please check your network connection</string>
	<string name="error_server_response">could not read server response</string>
	<string name="server_build">Server version &amp; build</string>
	<string name="install_package_newest">this is the newest available version</string>
	<string name="install_package_not_newest">a newer version is available %1$s</string>
	<string name="selected_directory"><![CDATA[Selected directory:<br /><b>%1$s</b>]]></string>
	<string name="create_directory">Create directory</string>
	<string name="warning_selected_directory_not_writable">Warning: this directory is not writable, if you choose it then some functions might not work</string>
	<string name="create">Create</string>
	<string name="create_directory_in"><![CDATA[Create directory in:<br /><b>%1$s</b>]]></string>
	<string name="enter_directory_name_here">Enter directory name here…</string>
	<string name="error_directory_already_exists">Error: directory already exists</string>
	<string name="server_action_title_start">start server</string>
	<string name="server_action_title_start_progress">Starting server…</string>
	<string name="server_action_title_stop">stop server</string>
	<string name="server_action_title_stop_progress">Stopping server…</string>
	<string name="server_action_title_restart">restart server</string>
	<string name="server_action_title_restart_progress">Restarting server…</string>
	<string name="server_action_title_get">get server settings(address, document root) and status</string>
	<string name="server_action_title_get_progress">Getting server settings and status…</string>
	<string name="server_action_title_set">set server settings(address, document root)</string>
	<string name="server_action_title_set_progress">Setting server settings…</string>
	<string name="application_requested_server_action"><![CDATA[<b>%1$s</b> is requesting <b>%2$s</b> to <b>%3$s</b>.<br />Do you allow it?]]></string>
	<string name="remember_choice_for_application"><![CDATA[Remember my choice for <b>%1$s</b>]]></string>
	<string name="deny">Deny</string>
	<string name="allow">Allow</string>
	<string name="application_requested_server_action_title">Request to %1$s</string>
	<string name="application_requested_by"><![CDATA[%1$s<br /><small>requested by %2$s</small>]]></string>
</resources>