<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
  android:layout_width="wrap_content" android:layout_height="match_parent"
  android:orientation="vertical"
>
	<TextView
		android:id="@+id/title"
		android:layout_width="match_parent" android:layout_height="wrap_content"
		android:paddingLeft="16dp" android:paddingRight="16dp"
		android:paddingTop="8dp" android:paddingBottom="8dp"
		android:textColor="#000000"
	  android:gravity="left|center_vertical"
		android:background="#EEEEEE"
	/>
	<TextView
		android:id="@+id/error"
		android:layout_width="match_parent" android:layout_height="wrap_content"
		android:paddingLeft="16dp" android:paddingRight="16dp"
		android:paddingTop="8dp" android:paddingBottom="8dp"
		android:visibility="gone"
	  style="@style/ErrorField"
	/>
	<FrameLayout android:layout_width="match_parent" android:layout_height="match_parent">
		<EditText
			android:id="@+id/input"
			android:layout_width="match_parent" android:layout_height="wrap_content"
		  android:hint="@string/enter_directory_name_here"
			android:layout_marginLeft="12dp" android:layout_marginRight="12dp"
			android:layout_marginBottom="48dp"
			android:singleLine="true"/>
		<LinearLayout
			android:layout_width="wrap_content" android:layout_height="48dp"
			android:orientation="horizontal" android:layout_gravity="right|bottom"
			>
			<Button
				android:id="@+id/button_cancel"
				android:layout_width="wrap_content" android:layout_height="wrap_content"
				android:text="@string/cancel"
				style="?attr/borderlessButtonStyle"/>
			<Button
				android:id="@+id/button_save"
				android:layout_width="wrap_content" android:layout_height="wrap_content"
				android:text="@string/create"
				style="?attr/borderlessButtonStyle"/>
		</LinearLayout>
	</FrameLayout>
</LinearLayout>